--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body style="background-color:#330033">
     <canvas id="myCanvas" ></canvas>
-	<div id="play"><a href = "https://stefanstafie.github.io/Whac-A-Mole2/"><img src="http://iconizer.net/files/DefaultIcon_ver_0.11/orig/media-play.png" class="myImage" ></a></div>
+	<div id="play"><a href ="https://stefanstafie.github.io/Color-Management/"><img src="http://iconizer.net/files/DefaultIcon_ver_0.11/orig/media-play.png" class="myImage" ></a></div>
 	<p class="s">Made by 3Pitici Corporation</p>
 	<p class="s">Copyright: Absolutely inexistent rights reserved </p>
 	
